# qcloud-iot-face-ai-c-sdk

./: .clang-format  .code.yml  .gitignore  CMakeLists.txt  cmake_build.sh  device_info.json  facekit_config.json  readme.md
docs/: IOT-Explorer人脸识别C-SDK-API说明.md  IOT-Explorer人脸识别C-SDK开发指南.md
include/: qcloud_iot_facekit.h
iot-explorer-c-sdk/: CMakeLists.txt
libs/Hi3516DV300/opencv/include/opencv2/: features2d.hpp  imgproc.hpp
libs/Hi3516DV300/opencv/include/opencv2/contrib/: contrib.hpp
libs/Hi3516DV300/opencv/include/opencv2/core/: core.hpp  softfloat.hpp  types_c.h  wimage.hpp
libs/Hi3516DV300/opencv/include/opencv2/core/utils/: filesystem.private.hpp
libs/Hi3516DV300/opencv/include/opencv2/features2d/: features2d.hpp
libs/Hi3516DV300/opencv/include/opencv2/highgui/: cap_ios.h
libs/Hi3516DV300/opencv/include/opencv2/legacy/: legacy.hpp
models/face-alignment-v236/: config.ini
models/face-feature-v704/: config.ini
models/face-quality-pro-v204/: config.ini
models/face-tracker-v435_v420/: config.ini
sample/: facekit_callback.c  facekit_sample.c
